# teanga-corpus-viewer

./: Cargo.toml  index.html  tailwind.config.js
src/: main.rs  render.rs  serialization.rs  teanga.rs
