[package]
name = "teanga-corpus-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version="0.21.0", features = ["csr"] }
yew_icons = { version="0.8", features = ["BootstrapChevronCompactLeft", "BootstrapChevronCompactRight", "FontAwesomeSolidUpload", "OcticonsBeaker24", "LucideSave"] }
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
web-sys = "*"
